--- a/.github/workflows/masterdeploy.yml
+++ b/.github/workflows/masterdeploy.yml
@@ -1,5 +1,7 @@
 name: Deploy master ARM template (KeyVault + WebApp)
-
+permissions:
+   id-token: write
+   contents: read
 on:
   workflow_dispatch:
     inputs:
