Change default resource group to 'RG1'

--- a/.github/workflows/masterdeploy.yml
+++ b/.github/workflows/masterdeploy.yml
@@ -8,7 +8,7 @@ on:
       resource_group:
         description: 'Target resource group for the deployment'
         required: true
-        default: 'MyResourceGroup'
+        default: 'RG1'
       location:
         description: 'Azure location to use (forwarded to parameters if needed)'
         required: false
